Refactor Coupon Management System: Added transaction management, enhanced validation, and introduced rule engine for discount application. Updated dependencies and removed obsolete files. Added comprehensive tests for service and controller layers.